src/assets/style/less/app.less
/* ... */
.spinner-wrapper                      { top: 0; right: 0; padding: .5em; color: var(--skin-color); background-color: transparent; }
.spinner-wrapper .spinner             { width: 80px; height: 80px; animation: circle infinite .75s linear; border-top-color: transparent; border-radius: 100%; border: 8px solid var(--skin-color); }
.spinner-wrapper .spinner.transparent { border: 8px solid var(--skin-color); border-top-color: transparent; }
.spinner-wrapper .spinner.blue        { border: 8px solid #fff; border-top-color: transparent; }
.spinner-wrapper.blue                 { background-color: @light-blue; color: white;}

.bar-loader                           { height: 4px; width: 100%; position: relative; overflow: hidden; background-color: #ddd; }
.bar-loader:before                    { background-color: var(--skin-d20); display: block; position: absolute; content: ""; left: -200px; width: 200px; height: 4px; animation: loading 1s linear infinite; }

/* Animation */
@keyframes circle    { 0% { transform: rotate(0); } 100% { transform: rotate(360deg); } }
@keyframes loading   { from { left: -200px; width: 30%; } 50% { width: 30%; } 70% { width: 70%; } 80% { left: 50%; } 95% { left: 120%; } to { left: 100%; } }

/**************************************************************************************
 * 2. Core
 **************************************************************************************/
html,
body               { min-height: 100%; }

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 400;
  overflow-x: hidden;
  overflow-y: auto;
}

/* Layout */

.wrapper               { height: 100%; width: 100%; overflow: hidden; }

/*
 * Content Wrapper - contains the main content
 */
.content-wrapper {
  transition: transform .3s ease-in-out, margin .3s ease-in-out;
  margin-left: @sidebar-width;
  min-height: 100%;
  background-color: #ecf0f5;
  padding-top: 50px;
  position: relative;
}

:root {
  @media (max-width: 767px) {
    .content-wrapper               { margin-left: 0; }
    //When opening the sidebar on small screens
    .sidebar-open .content-wrapper { transform: translate(@sidebar-width, 0); }
  }

  @media (min-width: 768px) {
    //When opening the sidebar on large screens
    .sidebar-collapse .content-wrapper { margin-left: 0; }
  }
}

/**************************************************************************************
* boxes.less
**************************************************************************************/

.box                                                 { position: relative; border-radius: 3px; background: #ffffff; border-top: 3px solid #d2d6de; margin-bottom: 20px; width: 100%; box-shadow: 0 1px 1px rgba(0, 0, 0, .1); }
.box.box-primary                                     { border-top-color: @light-blue; }
.box.collapsed-box .box-body,
.box.collapsed-box .box-footer                       { display: none; }
.box.height-control .box-body                        { max-height: 300px; overflow: auto; }
.box .border-right                                   { border-right: 1px solid #f4f4f4; }
.box .border-left                                    { border-left: 1px solid #f4f4f4; }

/* clear fix */

.box-header:before, .box-header:after,
.box-body:before,   .box-body:after,
.box-footer:before, .box-footer:after { content: " "; display: table; }
.box-header:after,
.box-body:after,
.box-footer:after                     { clear: both; }

.box-header                                        { color: #444; display: block; padding: 10px; position: relative; }
.box-header.with-border                            { border-bottom: 1px solid #f4f4f4; }
.collapsed-box .box-header.with-border             { border-bottom: none; }
.box-header > :is(.fa, .glyphicon, .ion),
.box-header .box-title                             { display: inline-block; font-size: 18px; margin: 0; line-height: 1; }
.box-header > :is(.fa, .glyphicon, .ion)           { margin-right: 5px; }
.box-header > .box-tools                           { position: absolute; right: 10px; top: 5px; }
.box-header > .box-tools [data-toggle="tooltip"]   { position: relative; }
.box-header > .box-tools.pull-right .dropdown-menu { right: 0; left: auto; }
.btn-box-tool                                      { padding: 5px; font-size: 12px; background: transparent; color: #97a0b3; }
.open .btn-box-tool,
.btn-box-tool:hover                                { color: #606c84; }
.btn-box-tool.btn:active                           { box-shadow: none; }
.box-body                                          { border-radius: 0 0 3px 3px; padding: 10px; }
.box-body.mobile                                   { padding: 5px; }
.box-body .no-header                               { border-top-right-radius: 3px; border-top-left-radius: 3px; }
.box-body > .table                                 { margin-bottom: 0; }
.box-body .box-pane                                { border-radius: 0 0 0 3px; }
.box-body .box-pane-right                          { border-radius: 0 0 3px 0; }
.box-footer                                        { border-radius: 0 0 3px 3px; border-top: 1px solid #f4f4f4; padding: 10px; background-color: #fff; }
.chart-legend                                      { list-style: none; margin: 0; padding: 0; margin: 10px 0; }

:root {
  @media (max-width: 767px) {
    .chart-legend > li { float: left; margin-right: 10px; }
  }
}

.box-input { max-width: 200px; }

// Fix for panels body text color when placed within a modal
.modal .panel-body { color: #444; }

/**************************************************************************************
* buttons.less
**************************************************************************************/

.btn                               { border-radius: 3px; box-shadow: none; border: 1px solid transparent; }
/* ... */

